--- a/frontend/app/components/modules/list/module-list.component.html
+++ b/frontend/app/components/modules/list/module-list.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main cadre">
     <h2>Modules de Capture-Marquage-Recapture</h2>
     <div class="container py-5">
         <div class="row">
