--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -15,7 +15,7 @@
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active" data-toggle="tab" role="tab" aria-selected="true" id="nav-module-tab" href="#module-tab">Module</a>
-                    <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-sites-tab" href="#sites-tab">Sites<span class="badge badge-pill badge-primary ml-2">{{ sites.length }}</span></a>
+                    <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-sites-tab" href="#sites-tab">{{module.forms.site.label_plural}}<span class="badge badge-pill badge-primary ml-2">{{ sites.length }}</span></a>
                     <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-individuals-tab" href="#individuals-tab">Individus<span class="badge badge-pill badge-primary ml-2">{{ individuals.length }}</span></a>
                 </div>
                 <div class="tab-content" id="nav-tabContent">
@@ -35,8 +35,8 @@
                         role="tabpanel"
                         attr.aria-labelledby="nav-sites-tab">
                         <div class="toolbar clearfix"><!-- TODO add cruved -->
-                            <button class="btn btn-success float-left" [routerLink]="['site']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter site</button>
-                            <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Télécharger</button>
+                            <button class="btn btn-success float-left" [routerLink]="['site']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter {{module.forms.site.label}}</button>
+                            <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export CSV</button>
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
                         </div>
                         <ngx-datatable #table
@@ -52,11 +52,7 @@
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
                                 </ng-template>
                             </ngx-datatable-column>
-                            <ngx-datatable-column width="200" name="Nom" prop="name">
-                            </ngx-datatable-column>
-                            <ngx-datatable-column width="300" name="Lieu" prop="lieu">
-                            </ngx-datatable-column>
-                            <ngx-datatable-column width="300" name="Commune" prop="commune">
+                            <ngx-datatable-column width="200" *ngFor="let prop of siteListProperties" [name]="siteFieldsDef[prop].attribut_label" [prop]="prop" >
                             </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
@@ -67,7 +63,7 @@
                         attr.aria-labelledby="nav-individuals-tab">
                         <div class="toolbar clearfix"><!-- TODO add cruved -->
                             <button disabled class="btn btn-success float-left"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter individu</button>
-                            <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Télécharger</button>
+                            <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export CSV</button>
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
                         </div>
                     </div>
