--- a/frontend/app/components/sites/form/site-form.component.html
+++ b/frontend/app/components/sites/form/site-form.component.html
@@ -14,7 +14,13 @@
         <div class="cadre scroll">
             <gn-cmr-breadcrumb [path]="path" [currentPage]="'Nouveau '+ module.forms.site.label"></gn-cmr-breadcrumb>
             <h3>Module: {{ module.module_label }}</h3>
-            <h4>Nouveau {{module.forms.site.label}}</h4>
+            <div class="clearfix">
+              <h4 class="float-left">Nouveau {{module.forms.site.label}}</h4>
+              <span class="float-right">
+                <i class="fa fa-repeat fa-lg"></i>
+                <mat-slide-toggle id="repeat" color="primary" [(ngModel)]="bChainInput"></mat-slide-toggle>
+              </span>
+            </div>
             <form [formGroup]="siteForm">
               <!--<p style="color:red" *ngIf="obj.config['geometry_type'] && !objForm.value.geometry">
                 Veuillez saisir une géométrie sur la carte
@@ -29,7 +35,8 @@
 
               <div class="clearfix">
                 <button class="btn btn-primary float-left" [routerLink]="['..']">Annuler</button>
-                <button class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
+                <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
+                <button *ngIf="bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider et enchainer les saisies</button>
               </div>
       
             </form>
