--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="flex-container">
-        <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
+        <div class="cadre" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
             <pnx-map height="100%" class="map-card">
                 <!--<pnx-leaflet-draw 
                     [bEnable]="false"
@@ -9,7 +9,7 @@
                 </pnx-leaflet-draw>-->
             </pnx-map>
         </div>
-        <div class="cadre scroll">
+        <div class="cadre scroll" [style.max-height]="cardContentHeight + 'px'" style="overflow-y:auto">
             <gn-cmr-breadcrumb [currentPage]="'Module: ' + module.module_label"></gn-cmr-breadcrumb>
             <h3>Module: {{ module.module_label }}</h3>
             <div *ngIf="dataset.dataset_name" class="toolbar mb-2">
@@ -52,7 +52,9 @@
                             [rowHeight]="40"
                             [draggable]="false"
                             [count]="sites.length"
-                            [limit]="25">
+                            [limit]="15"
+                            [headerHeight]="50"
+                            [footerHeight]="50">
 
                             <ngx-datatable-column width="15">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
