--- a/frontend/app/components/sites/form/site-form.component.html
+++ b/frontend/app/components/sites/form/site-form.component.html
@@ -35,8 +35,9 @@
 
               <div class="clearfix">
                 <button class="btn btn-primary float-left" [routerLink]="['..']">Annuler</button>
-                <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
-                <button *ngIf="bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider et enchainer les saisies</button>
+                <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit(true)"><i class="fa fa-check"></i>&nbsp;Valider et ajouter une visite</button>
+                <button *ngIf="!bChainInput" class="btn btn-success float-right mr-2" [disabled]="!siteForm.valid" (click)="onSubmit(false)"><i class="fa fa-check"></i>&nbsp;Valider</button>
+                <button *ngIf="bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit(false)"><i class="fa fa-check"></i>&nbsp;Valider et enchainer les saisies</button>
               </div>
       
             </form>
