--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -28,6 +28,27 @@
                     <button class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
                     <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
                 </div>
+                <ngx-datatable #table
+                    class="material striped margin-top-xs"
+                    [rows]="observations"
+                    [rowHeight]="40"
+                    [draggable]="false"
+                    [count]="observations.length"
+                    [limit]="15"
+                    [headerHeight]="50"
+                    [footerHeight]="50">
+
+                    <ngx-datatable-column width="15">
+                        <ng-template let-row="row" ngx-datatable-cell-template>
+                            <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                        </ng-template>
+                    </ngx-datatable-column>
+                    <ngx-datatable-column width="200" *ngFor="let prop of observationListProperties" [name]="observationFieldsDef[prop].attribut_label" [prop]="prop" >
+                        <ng-template let-row="row" ngx-datatable-cell-template>
+                            <span>{{_dataService.formatProperty(row[prop], observationFieldsDef[prop])}}</span>
+                        </ng-template>
+                    </ngx-datatable-column>
+                </ngx-datatable>
             </div>
         </div>
     </div>
