--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -76,6 +76,24 @@
                         <div class="toolbar clearfix">
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
                         </div>
+                        <ngx-datatable #table
+                            class="material striped margin-top-xs"
+                            [rows]="individuals"
+                            [rowHeight]="40"
+                            [draggable]="false"
+                            [count]="individuals.length"
+                            [limit]="15"
+                            [headerHeight]="50"
+                            [footerHeight]="50">
+
+                            <ngx-datatable-column width="15">
+                                <ng-template let-row="row" ngx-datatable-cell-template>
+                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['../..','individual', row.id_individual]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                                </ng-template>
+                            </ngx-datatable-column>
+                            <ngx-datatable-column width="200" *ngFor="let prop of individualListProperties" [name]="individualFieldsDef[prop].attribut_label" [prop]="prop" >
+                            </ngx-datatable-column>
+                        </ngx-datatable>
                     </div>
                 </div>
             </nav>
