--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -54,7 +54,8 @@
                                     [count]="historic.length"
                                     [limit]="15"
                                     [headerHeight]="50"
-                                    [footerHeight]="50">
+                                    [footerHeight]="50"
+                                    [sorts]="[{prop: 'visit_date',dir:'desc'}]">
 
                                     <ngx-datatable-column width="200" *ngFor="let prop of historicListProperties" [name]="historicFieldsDef[prop].attribut_label" [prop]="prop" >
                                         <ng-template let-row="row" ngx-datatable-cell-template>
