--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -58,7 +58,8 @@
                             [count]="visits.length"
                             [limit]="15"
                             [headerHeight]="50"
-                            [footerHeight]="50">
+                            [footerHeight]="50"
+                            [sorts]="[{prop: 'date', dir:'desc'}]">
 
                             <ngx-datatable-column width="15">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
