--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -56,9 +56,10 @@
                             [headerHeight]="50"
                             [footerHeight]="50">
 
-                            <ngx-datatable-column width="15">
+                            <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
-                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]"><i class="fa fa-info-circle" aria-hidden="true" matTooltip="Informations"></i></a>
+                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['site', {edit: row.id_site}]"><i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="Editer"></i></a>
                                 </ng-template>
                             </ngx-datatable-column>
                             <ngx-datatable-column width="200" *ngFor="let prop of siteListProperties" [name]="siteFieldsDef[prop].attribut_label" [prop]="prop" >
