--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -61,9 +61,10 @@
                             [footerHeight]="50"
                             [sorts]="[{prop: 'date', dir:'desc'}]">
 
-                            <ngx-datatable-column width="15">
+                            <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
-                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['visit', row.id_visit]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['visit', row.id_visit]"><i class="fa fa-info-circle" aria-hidden="true" matTooltip="Informations"></i></a>
+                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['visit', {edit: row.id_visit}]"><i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="Editer"></i></a>
                                 </ng-template>
                             </ngx-datatable-column>
                             <ngx-datatable-column width="200" *ngFor="let prop of visitListProperties" [name]="visitFieldsDef[prop].attribut_label" [prop]="prop" >
