--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -26,6 +26,7 @@
                     <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-individuals-tab" href="#individuals-tab">Individus<span class="badge badge-pill badge-primary ml-2">{{ individuals.length }}</span></a>
                 </div>
                 <div class="tab-content" id="nav-tabContent">
+                    <!-- TAB "Module" -->
                     <div
                         class="tab-pane fade active show"
                         id="module-tab"
@@ -36,6 +37,8 @@
                             </div>
                             <p *ngIf="module.config.welcome">{{ module.config.welcome }}</p>
                     </div>
+
+                    <!-- TAB "Site" -->
                     <div
                         class="tab-pane fade"
                         id="sites-tab"
@@ -58,14 +61,20 @@
 
                             <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
-                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]"><i class="fa fa-info-circle" aria-hidden="true" matTooltip="Informations"></i></a>
-                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['site', {edit: row.id_site}]"><i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="Editer"></i></a>
+                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['site', row.id_site]">
+                                        <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.site.label + ' ' + row.name"></i>
+                                    </a>
+                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['site', {edit: row.id_site}]">
+                                        <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer ' + module.forms.site.label + ' ' + row.name"></i>
+                                    </a>
                                 </ng-template>
                             </ngx-datatable-column>
                             <ngx-datatable-column width="200" *ngFor="let prop of siteListProperties" [name]="siteFieldsDef[prop].attribut_label" [prop]="prop" >
                             </ngx-datatable-column>
                         </ngx-datatable>
                     </div>
+
+                    <!-- TAB "Individuals -->
                     <div
                         class="tab-pane fade"
                         id="individuals-tab"
@@ -88,7 +97,9 @@
 
                             <ngx-datatable-column width="15">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
-                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['individual', row.id_individual]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['individual', row.id_individual]">
+                                        <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations Individu ' + row.identifier"></i>
+                                    </a>
                                 </ng-template>
                             </ngx-datatable-column>
                             <ngx-datatable-column width="200" *ngFor="let prop of individualListProperties" [name]="individualFieldsDef[prop].attribut_label" [prop]="prop" >
