--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -40,7 +40,9 @@
 
                     <ngx-datatable-column width="15">
                         <ng-template let-row="row" ngx-datatable-cell-template>
-                            <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                            <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]">
+                                <i class="fa fa-info-circle" aria-hidden="true" matTooltip="Détails de l'Observation"></i>
+                            </a>
                         </ng-template>
                     </ngx-datatable-column>
                     <ngx-datatable-column width="200" *ngFor="let prop of observationListProperties" [name]="observationFieldsDef[prop].attribut_label" [prop]="prop" >
