--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -33,9 +33,22 @@
                         role="tabpanel"
                         attr.aria-labelledby="nav-module-tab">
                             <div class="clearfix">
-                                <button class="btn btn-primary float-right"><i class="fa fa-pencil"></i>&nbsp;Editer</button><!-- TODO add cruved -->
+                                <button class="btn btn-primary float-right" [routerLink]="['module', {edit: module.module_code}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button><!-- TODO add cruved -->
                             </div>
-                            <p *ngIf="module.config.welcome">{{ module.config.welcome }}</p>
+                            <p *ngIf="module.config.welcome" id="welcome-msg">{{ module.config.welcome }}</p>
+                            <div class="">
+                                <table class="table table-striped table-sm scrollable">
+                                    <tr><th>Module</th><td>{{module.module_label}}</td></tr>
+                                    <tr><th>Description</th><td class="text-in-area">{{module.module_desc}}</td></tr>
+                                    <tr *ngFor="let fieldName of properties">
+                                        <th>{{ fields[fieldName].attribut_label }}</th>
+                                        <td class="text-in-area">{{ _dataService.formatProperty(module[fieldName], fields[fieldName])}}</td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="">
+                                <h5>Médias</h5>
+                            </div>
                     </div>
 
                     <!-- TAB "Site" -->
