--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -38,10 +38,13 @@
                     [headerHeight]="50"
                     [footerHeight]="50">
 
-                    <ngx-datatable-column width="15">
+                    <ngx-datatable-column width="60">
                         <ng-template let-row="row" ngx-datatable-cell-template>
                             <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]">
                                 <i class="fa fa-info-circle" aria-hidden="true" matTooltip="Détails de l'Observation"></i>
+                            </a>
+                            <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', row.id_individual, 'observation', {edit: row.id_observation}]">
+                                <i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="Editer l'Observation"></i>
                             </a>
                         </ng-template>
                     </ngx-datatable-column>
