--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -5,7 +5,7 @@
             <h3 class="float-left">Individu: {{individual.identifier}}</h3>
             <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Télécharger la fiche individu</button>
             <button disabled class="btn btn-success float-right ml-2"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter une visite</button>
-            <button disabled class="btn btn-success float-right ml-2"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
+            <button class="btn btn-primary float-right ml-2" [routerLink]="['..', {edit: individual.id_individual}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
         </div>
         <div class="">
             <span><strong>Identifier: </strong>{{individual.identifier}}</span>
