--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -92,10 +92,13 @@
                             [headerHeight]="50"
                             [footerHeight]="50">
 
-                            <ngx-datatable-column width="15">
+                            <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['../..','individual', row.id_individual]">
                                         <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations Individu ' + row.identifier"></i>
+                                    </a>
+                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['../..', 'individual', {edit: row.id_individual}]">
+                                        <i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="'Editer Individu ' + row.identifier"></i>
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
