--- a/frontend/app/components/individuals/form/individual-form.component.html
+++ b/frontend/app/components/individuals/form/individual-form.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="cadre">
-        <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition' : 'Nouvel') + ' Individu' + (bEdit ? ': ' + individual.identifier : '')"></gn-cmr-breadcrumb>
-        <h3 class="">{{ (bEdit ? 'Edition ' : 'Nouvel ') + 'Individu' + ( bEdit ? ': ' + individual.identifier : '')}}</h3>
+        <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition' : 'Création') + ' Individu' + (bEdit ? ': ' + individual.identifier : '')"></gn-cmr-breadcrumb>
+        <h3 class="">{{ (bEdit ? 'Edition ' : 'Création ') + 'Individu' + ( bEdit ? ': ' + individual.identifier : '')}}</h3>
         <div class="flex-container">
             <div class="">
                 <form [formGroup]="individualForm">
