--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -2,9 +2,9 @@
     <div class="flex-container">
         <div class="cadre" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
             <div id="details">
-                <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Nouvelle ') +'Observation Individu'"></gn-cmr-breadcrumb>
+                <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') +'Observation Individu'"></gn-cmr-breadcrumb>
                 <div class="">
-                    <h3>{{ bEdit ? 'Edition ' : 'Nouvelle '}}Observation d'un individu</h3>
+                    <h3>{{ bEdit ? 'Edition ' : 'Création '}}Observation d'un individu</h3>
                 </div>
                 <div class="">
                     <div class="mb-2">
