--- a/frontend/app/components/sitegroups/form/sitegroups-form.component.html
+++ b/frontend/app/components/sitegroups/form/sitegroups-form.component.html
@@ -12,10 +12,10 @@
             </pnx-map>
         </div>
         <div class="cadre scroll">
-            <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Nouveau ')+ module.forms.sitegroup.label + (bEdit ? ' ' + sitegroup.name : '')"></gn-cmr-breadcrumb>
+            <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ')+ module.forms.sitegroup.label + (bEdit ? ' ' + sitegroup.name : '')"></gn-cmr-breadcrumb>
             <h3>Module: {{ module.module_label }}</h3>
             <div class="clearfix">
-              <h4 class="float-left">{{ bEdit ? 'Edition' : 'Nouveau'}} {{module.forms.sitegroup.label}} {{bEdit ? ': ' + sitegroup.name : ''}}</h4>
+              <h4 class="float-left">{{ bEdit ? 'Edition' : 'Création'}} {{module.forms.sitegroup.label}} {{bEdit ? ': ' + sitegroup.name : ''}}</h4>
               <span class="float-right" *ngIf="!bEdit">
                 <i class="fa fa-repeat fa-lg"></i>
                 <mat-slide-toggle id="repeat" color="primary" [(ngModel)]="bChainInput"></mat-slide-toggle>
